--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Scientific supervision:
 
 Contributions by:
  Peter Bartz, Florian Hinterleitner, Torben Hohn,
- Lukas Kaser, André Möhl, Till Rettberg
+ Lukas Kaser, André Möhl, Till Rettberg, Fiete Winter
 
 GUI design:
  Katharina Bredies, Jonas Loh, Jens Ahrens
