Update RTD URL in README

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ For questions, bug reports and feature requests:
 
 Contact:       ssr@spatialaudio.net
 Website:       http://spatialaudio.net/ssr/
-Documentation: http://ssr.readthedocs.io/en/latest/
+Documentation: https://ssr.readthedocs.io/
 
 Copyright (c) 2016-2018 Division of Applied Acoustics
                         Chalmers University of Technology
