Add IOhannes m zmölnig to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,8 @@ Scientific supervision:
 Contributions by:
  Peter Bartz, Florian Hinterleitner, Torben Hohn,
  Christoph Hohnerlein, Christoph Hold, Lukas Kaser,
- André Möhl, Till Rettberg, David Runge, Fiete Winter
+ André Möhl, Till Rettberg, David Runge, Fiete Winter,
+ IOhannes m zmölnig
 
 GUI design:
  Katharina Bredies, Jonas Loh, Jens Ahrens
