--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,20 @@
 User-visible changes in the SoundScape Renderer. Recent changes on top.
 
+0.6.1 (7 July 2023)
+
+ - Support for dynamic 3D scenes with ASDF v0.4
+
+ - Add 3D support for Polhemus tracker
+
+ - Add Pd patch for supperware head tracker support incl. 3D rotations
+
+ - Add JACK client name to window title
+
+ - Don't auto-start JACK server
+
+ - Remove the possibility to build an App Bundle for macOS
+   (we have a brew package instead!)
+
 0.6.0 (1 February 2023)
 
  - 3D support for the binaural renderer using SOFA files
