Add Hannes Helmholz to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@ Scientific supervision:
  Sascha Spors
 
 Contributions by:
- Peter Bartz, Florian Hinterleitner, Torben Hohn,
+ Peter Bartz, Hannes Helmholz, Florian Hinterleitner, Torben Hohn,
  Christoph Hohnerlein, Christoph Hold, Lukas Kaser,
  André Möhl, Till Rettberg, David Runge, Fiete Winter,
  IOhannes m zmölnig
